반응형 작업중(헤더 완료)

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=1440" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./assets/css/style.css" rel="stylesheet">
+    <script src="./assets/js/ui.js"></script>
     <title>INKEY BINDER</title>
 </head>
 <body>
     <div id="app" class="page-wrap">
         <header class="header-wrap">
             <div class="header-inner">
-                <h1 class="toplogo"><a href="#" class="toplogo-link"><img src="./assets/images/toplogo2.png" alt="INKEY BINDER"><span class="toplogo-text">Frontend Developer</span></a></h1>
+                <h1 class="toplogo"><a href="#" class="toplogo-link"><img src="./assets/images/toplogo2x2.png" alt="INKEY BINDER"><span class="toplogo-text">Frontend Developer</span></a></h1>
                 <div class="header-main-cols">
                     <nav class="nav-wrap">
                         <ul class="nav-list">
@@ -26,6 +27,23 @@
                         </ul>
                     </div> -->
                 </div>
+                <a href="javascript:void(0)" class="btn-panel-menu">
+                    <span class="btn-panel-menu-ico"></span>
+                    <span class="hdtext">메인 메뉴 열기</span>
+                </a>
+                <!-- mobile menu -->
+                <div class="mobile-menu-zone">
+                    <div class="mobile-menu-wrap">
+                        <div class="mobile-menu-inner">
+                            <ul class="mobile-menu-list">
+                                <li><a href="#" class="mobile-menu">ABOUT</a></li>
+                                <li><a href="#" class="mobile-menu">WORK</a></li>
+                            </ul>
+                        </div>
+                        <a href="javascript:void(0)" class="btn-mobile-menu-close"><span class="hdtext">메인 메뉴 닫기</span></a>
+                    </div>
+                </div>
+                <!-- // mobile menu -->
             </div>
         </header>
         <section class="middle-wrap">
