about 반응형 완료

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                                             <a href="https://www.instagram.com/invites/contact/?i=3dakqjwlsfo0&utm_content=6kmmqbd" target="_blank" class="profile-icon icon-insta"></a>
                                         </p>
                                         <p class="profile-main-unit">Frontend Developer / Publisher / UI Developer</p>
-                                        <ul class="profile-else-list">
-                                            <!-- <a href="#" target="_blank" class="profile-icon icon-notion"></a> -->
-                                        </ul>
+                                        <!-- <ul class="profile-else-list">
+                                            <a href="#" target="_blank" class="profile-icon icon-notion"></a>
+                                        </ul> -->
                                     </div>
                                 </div>
                             </div>
