--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     <div class="mobile-menu-wrap">
                         <div class="mobile-menu-inner">
                             <ul class="mobile-menu-list">
-                                <li><a href="#" class="mobile-menu">ABOUT</a></li>
-                                <li><a href="#" class="mobile-menu">WORK</a></li>
+                                <li><a href="index.html" class="mobile-menu">ABOUT</a></li>
+                                <li><a href="work.html" class="mobile-menu">WORK</a></li>
                             </ul>
                         </div>
                         <a href="javascript:void(0)" class="btn-mobile-menu-close"><span class="hdtext">메인 메뉴 닫기</span></a>
