디자인 완료

--- a/template.html
+++ b/template.html
@@ -1,138 +1,155 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./assets/css/style.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./assets/css/style.css" rel="stylesheet" />
     <script src="./assets/js/ui.js"></script>
-    <title>INKEY BINDER</title>
-</head>
-<body>
+    <title>UIK</title>
+  </head>
+  <body>
     <div id="app" class="page-wrap">
-        <header class="header-wrap">
-            <div class="header-inner">
-                <h1 class="toplogo"><a href="#" class="toplogo-link"><img src="./assets/images/toplogo2x2.png" alt="INKEY BINDER"><span class="toplogo-text">Frontend Developer</span></a></h1>
-                <div class="header-main-cols">
-                    <nav class="nav-wrap">
-                        <ul class="nav-list">
-                            <li><a href="#" class="nav-item">ABOUT</a></li>
-                            <li><a href="#" class="nav-item">WORK</a></li>
-                            <!-- <li><a href="#" class="nav-item">STUDY</a></li> -->
-                        </ul>
-                    </nav>
-                    <div class="util-item-wrap">
-                        <ul class="util-item-list">
-                            <li><span class="util-item"><img src="./assets/images/vue_logo.png" alt="v"></span></li>
-                        </ul>
-                    </div>
-                </div>
-                <a href="javascript:void(0)" class="btn-panel-menu">
-                    <span class="btn-panel-menu-ico"></span>
-                    <span class="hdtext">메인 메뉴 열기</span>
-                </a>
-                <!-- mobile menu -->
-                <div class="mobile-menu-zone">
-                    <div class="mobile-menu-wrap">
-                        <div class="mobile-menu-inner">
-                            <ul class="mobile-menu-list">
-                                <li><a href="index.html" class="mobile-menu">ABOUT</a></li>
-                                <li><a href="work.html" class="mobile-menu">WORK</a></li>
-                            </ul>
-                        </div>
-                        <a href="javascript:void(0)" class="btn-mobile-menu-close"><span class="hdtext">메인 메뉴 닫기</span></a>
-                    </div>
-                </div>
-                <!-- // mobile menu -->
+      <header class="header-wrap">
+        <div class="header-inner">
+          <h1 class="toplogo">
+            <a href="#" class="toplogo-link"
+              ><img src="./assets/images/toplogo_uik_2x2.png" alt="UIK" /><span
+                class="toplogo-text"
+                >Frontend Developer</span
+              ></a
+            >
+          </h1>
+          <div class="header-main-cols">
+            <nav class="nav-wrap">
+              <ul class="nav-list">
+                <li><a href="#" class="nav-item">ABOUT</a></li>
+                <li><a href="#" class="nav-item">WORK</a></li>
+                <li><a href="Component.html" class="nav-item">COMPONENT</a></li>
+                <!-- <li><a href="#" class="nav-item">STUDY</a></li> -->
+              </ul>
+            </nav>
+            <div class="util-item-wrap">
+              <ul class="util-item-list">
+                <li>
+                  <span class="util-item"
+                    ><img src="./assets/images/react_logo.svg" alt="react"
+                  /></span>
+                </li>
+              </ul>
             </div>
-        </header>
-        <section class="middle-wrap">
-            <div class="middle-templete">
-                <div class="middle-left-cols">
-                    <div class="middle-left-item">
-                        <h2 class="middle-left-title">ABOUT</h2>
-                        <ul class="middle-menu-list">
-                            <li><a href="#" class="middle-menu active">INTRO</a></li>
-                            <li><a href="#" class="middle-menu">SKILLS</a></li>
-                            <li><a href="#" class="middle-menu">CONTACT ME</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="middle-right-cols">
-                    <div class="middle-right-content">
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.<br>
-                        내용이 들어갑니다.
-                    </div>
-                </div>
+          </div>
+          <a href="javascript:void(0)" class="btn-panel-menu">
+            <span class="btn-panel-menu-ico"></span>
+            <span class="hdtext">메인 메뉴 열기</span>
+          </a>
+          <!-- mobile menu -->
+          <div class="mobile-menu-zone">
+            <div class="mobile-menu-wrap">
+              <div class="mobile-menu-inner">
+                <ul class="mobile-menu-list">
+                  <li><a href="index.html" class="mobile-menu">ABOUT</a></li>
+                  <li><a href="work.html" class="mobile-menu">WORK</a></li>
+                  <li>
+                    <a href="Component.html" class="mobile-menu">COMPONENT</a>
+                  </li>
+                </ul>
+              </div>
+              <a href="javascript:void(0)" class="btn-mobile-menu-close"
+                ><span class="hdtext">메인 메뉴 닫기</span></a
+              >
             </div>
-        </section>
-        <footer class="footer-wrap">
-            <div class="footer-inner">
-                <p class="footer-copy">Copyright (c) INKEY BINDER. All rights reserved</p>
+          </div>
+          <!-- // mobile menu -->
+        </div>
+      </header>
+      <section class="middle-wrap">
+        <div class="middle-templete">
+          <div class="middle-left-cols">
+            <div class="middle-left-item">
+              <h2 class="middle-left-title">ABOUT</h2>
+              <ul class="middle-menu-list">
+                <li><a href="#" class="middle-menu active">INTRO</a></li>
+                <li><a href="#" class="middle-menu">SKILLS</a></li>
+                <li><a href="#" class="middle-menu">CONTACT ME</a></li>
+              </ul>
             </div>
-        </footer>
+          </div>
+          <div class="middle-right-cols">
+            <div class="middle-right-content">
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.<br />
+              내용이 들어갑니다.
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer class="footer-wrap">
+        <div class="footer-inner">
+          <p class="footer-copy">Copyright (c) UIK. All rights reserved</p>
+        </div>
+      </footer>
     </div>
-</body>
+  </body>
 </html>
