--- a/component.html
+++ b/component.html
@@ -93,7 +93,18 @@
                   </div>
                   <div class="block-slice-item">
                     <p class="block-slice-title">Code</p>
-                    <div class="block-slice-cont">코드 HTML</div>
+                    <div class="block-slice-cont">
+                      <div class="vertical-code-wrap">
+                        <textarea
+                          rows="10"
+                          cols="10"
+                          class="textarea"
+                          style="height: 225px"
+                        >
+                        </textarea>
+                        <a href="#" class="btn-copyitem"></a>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -107,7 +118,18 @@
                   </div>
                   <div class="block-slice-item">
                     <p class="block-slice-title">Code</p>
-                    <div class="block-slice-cont">코드 HTML</div>
+                    <div class="block-slice-cont">
+                      <div class="vertical-code-wrap">
+                        <textarea
+                          rows="10"
+                          cols="10"
+                          class="textarea"
+                          style="height: 225px"
+                        >
+                        </textarea>
+                        <a href="#" class="btn-copyitem"></a>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -121,7 +143,18 @@
                   </div>
                   <div class="block-slice-item">
                     <p class="block-slice-title">Code</p>
-                    <div class="block-slice-cont">코드 HTML</div>
+                    <div class="block-slice-cont">
+                      <div class="vertical-code-wrap">
+                        <textarea
+                          rows="10"
+                          cols="10"
+                          class="textarea"
+                          style="height: 225px"
+                        >
+                        </textarea>
+                        <a href="#" class="btn-copyitem"></a>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -135,7 +168,18 @@
                   </div>
                   <div class="block-slice-item">
                     <p class="block-slice-title">Code</p>
-                    <div class="block-slice-cont">코드 HTML</div>
+                    <div class="block-slice-cont">
+                      <div class="vertical-code-wrap">
+                        <textarea
+                          rows="10"
+                          cols="10"
+                          class="textarea"
+                          style="height: 225px"
+                        >
+                        </textarea>
+                        <a href="#" class="btn-copyitem"></a>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -149,7 +193,18 @@
                   </div>
                   <div class="block-slice-item">
                     <p class="block-slice-title">Code</p>
-                    <div class="block-slice-cont">코드 HTML</div>
+                    <div class="block-slice-cont">
+                      <div class="vertical-code-wrap">
+                        <textarea
+                          rows="10"
+                          cols="10"
+                          class="textarea"
+                          style="height: 225px"
+                        >
+                        </textarea>
+                        <a href="#" class="btn-copyitem"></a>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
